--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/bookclubdb
 spring.datasource.username = root
-spring.datasource.password = pass
+spring.datasource.password = pluralsight
 
 # Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
